# charades

./: .env.example  .pre-commit-config.yaml  .windsurfrules  OPT_IN_STORY.md  README.md  justfile  manage.py  pyproject.toml
.github/workflows/: ci.yml
src/charades/: .env.example
src/charades/config/: settings.py  urls.py
src/charades/game/: admin.py  ai_utils.py  api.py  apps.py  logic.py  models.py  renderers.py  schemas.py  utils.py
src/charades/game/ai/: __init__.py  anthropic.py  base.py  manager.py  models.py  openai.py  prompts.py
src/charades/game/migrations/: 0001_initial.py
test/: conftest.py
test/charades/game/: conftest.py  test_logic.py  test_utils.py
test/game/: test_api.py
