[project]
name = "charades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Joshua Szepietowski", email = "joshSzep@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.3.0",
    "django>=5.1.5",
    "twilio>=9.4.4",
    "django-stubs>=5.1.2",
]

[project.scripts]
charades = "charades:main"

[project.optional-dependencies]
dev = ["black>=24.1.1", "ruff>=0.2.1", "pyright>=1.1.349", "pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
known_first_party = ["charades"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
known-first-party = ["charades"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = true
reportUnusedVariable = true
