[project]
name = "charades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Joshua Szepietowski", email = "joshSzep@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.3.0",
    "django>=5.1.5",
    "twilio>=9.4.4",
    "django-stubs>=5.1.2",
    "python-dotenv>=1.0.1",
    "openai>=1.61.0",
]

[project.scripts]
charades = "charades:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
    "pyright>=1.1.349",
    "pytest>=8.3.4",
    "pre-commit>=4.1.0",
    "isort>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["charades"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = true
reportUnusedVariable = true
